k8s/02.mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    ytdl: mariadb
  name: mariadb
  namespace: ytdl
spec:
  replicas: 1
  selector:
    matchLabels:
      ytdl: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        ytdl: mariadb
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: ro0tP4sSworD
            - name: MYSQL_DATABASE
              value: ytdl
          image: mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: "mariadb-persistent-storage"
      restartPolicy: Always
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    ytdl: mariadb
  name: mariadb-svc
  namespace: ytdl
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    ytdl: mariadb
status:
  loadBalancer: {}
